--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "tailwind-merge": "^1.14.0",
     "tailwind-scrollbar": "^3.0.4",
     "tailwindcss-animate": "^1.0.6",
+    "tw-elements": "^1.0.0-beta3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
