--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "google-auth-library": "^9.0.0",
+    "https": "^1.0.0",
     "jsonwebtoken": "^9.0.1",
     "mysql": "^2.18.1",
     "nodemon": "^3.0.1"
