--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,9 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@react-oauth/google": "^0.11.1",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/pdfjs-dist-signature": "^2.7.570",
+    "@react-pdf/renderer": "^3.1.12",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,7 +18,10 @@
     "chart.js": "^4.3.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.5",
+    "jspdf": "^2.5.1",
     "lucide-react": "^0.261.0",
     "pondjs": "^0.8.10",
     "react": "^18.2.0",
@@ -31,7 +37,8 @@
     "tailwind-scrollbar": "^3.0.4",
     "tailwindcss-animate": "^1.0.6",
     "tw-elements": "^1.0.0-beta3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
