--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "https": "^1.0.0",
     "jsonwebtoken": "^9.0.1",
     "mysql": "^2.18.1",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "pdfkit": "^0.13.0"
   }
 }
