--- a/client/package.json
+++ b/client/package.json
@@ -31,7 +31,8 @@
     "tailwind-scrollbar": "^3.0.4",
     "tailwindcss-animate": "^1.0.6",
     "tw-elements": "^1.0.0-beta3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
